--- a/pixrus/buyer/templates/buyer_landing_new.html
+++ b/pixrus/buyer/templates/buyer_landing_new.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Your Page Title{% endblock %}</title>
-    <link href="{% static 'css/tabler.css' %}" rel="stylesheet"/>
+<link href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css" rel="stylesheet">
+
 </head>
 <body>
 <div class="page">
