--- a/pixrus/seller/templates/activate_pick.html
+++ b/pixrus/seller/templates/activate_pick.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pick Details</title>
-    <link href="{% static 'css/tabler.css' %}" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css" rel="stylesheet">
     <script>
 function confirmActivation(commence_time, home_team, away_team, game, bookmaker, outcome, multiplier, sport, league, type) {
     const unit_amount = prompt(`Please enter a unit size for the following game activation:\n\nGame: ${game}\nBookmaker: ${bookmaker}\nOutcome: ${outcome}\nOdds: ${multiplier}`);
