--- a/pixrus/seller/templates/profile_view.html
+++ b/pixrus/seller/templates/profile_view.html
@@ -1,11 +1,10 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ seller.user_name }}'s Profile</title>
-    <link href="{% static 'css/tabler.css' %}" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="page">
