--- a/pixrus/seller/templates/post_pick.html
+++ b/pixrus/seller/templates/post_pick.html
@@ -8,6 +8,17 @@
 <link href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css" rel="stylesheet">
 </head>
 <body>
+        <div class="steps">
+  <a href="#" class="step-item">
+    Look up the relevant pick
+  </a>
+  <a href="#" class="step-item active">
+    Find the exact Game
+  </a>
+  <a href="#" class="step-item">
+    Activate with the necessary units
+  </a>
+</div>
     <div class="container mt-5">
         <!-- Back to Dashboard -->
         <div class="mb-4">
