--- a/pixrus/seller/templates/look_up.html
+++ b/pixrus/seller/templates/look_up.html
@@ -22,6 +22,18 @@
 </head>
 <body>
 
+<div class="steps">
+  <a href="#" class="step-item active">
+    Look up the relevant pick
+  </a>
+  <a href="#" class="step-item">
+    Find the exact Game
+  </a>
+  <a href="#" class="step-item active">
+    Activate with the necessary units
+  </a>
+</div>
+
     <div class="container form-container d-flex justify-content-center align-items-center">
         <div class="card p-4 shadow-lg" style="width: 400px;">
             <h1 class="text-center">Pick Filtering</h1>
