--- a/pixrus/buyer/templates/market_new.html
+++ b/pixrus/buyer/templates/market_new.html
@@ -85,7 +85,7 @@
             <div class="col-md-6 col-lg-3">
               <h5>Safest Sellers</h5>
               {% for seller, stat in top_three_safest_sellers_past_week %}
-              <p>{{ forloop.counter }}. <a href="{% url 'profile_view' seller.id %}">{{ seller.user_name }}</a> (Avg risk: {{ stat }})</p>
+              <p>{{ forloop.counter }}. <a href="{% url 'profile_view' seller.id%}">{{ seller.user_name }}</a> (Avg risk: {{ stat }})</p>
               {% endfor %}
             </div>
             <div class="col-md-6 col-lg-3">
@@ -133,14 +133,14 @@
     <h2 class="text-center">Recommended Sellers</h2>
   </div>
 
-  {% for seller in recommended_sellers %}
+  {% for picks_sold, success_rate, average_odds,seller in recommended_sellers %}
   <div class="col-md-6 col-lg-4">
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">{{ seller.user_name }}</h3>
-        <p><strong>Total Picks Sold:</strong> {{ seller.picks_sold }}</p>
-        <p><strong>Success Rate:</strong> {{ seller.success_rate }}%</p>
-        <p><strong>Average Odds:</strong> {{ seller.average_odds }}</p>
+        <p><strong>Total Picks Sold:</strong> {{ picks_sold }}</p>
+        <p><strong>Success Rate:</strong> {{ success_rate }}%</p>
+        <p><strong>Average Odds:</strong> {{ average_odds }}</p>
         <div class="mt-3">
           <a href="{% url 'profile_view' seller.id %}" class="btn btn-primary w-100">View Profile</a>
         </div>
