--- a/pixrus/seller/templates/seller_manage.html
+++ b/pixrus/seller/templates/seller_manage.html
@@ -8,8 +8,17 @@
 <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta20/dist/js/tabler.min.js"></script>
 <body>
     <div class="page">
+        <div class="row m-3">
+            <div class="col-auto">
+                <a href="{% url 'seller_dashboard' %}" class="btn btn-secondary w-100 back-button">Back to Dashboard</a>
+            </div>
+        </div>
         <div class="container ">
-            <h1>Manage Profile for {{ seller.user_name }}</h1>
+            <div class="row align-items-center mt-3 mb-3">
+                <div class="col text-center">
+                    <h1>Manage Profile for {{ seller.user_name }}</h1>
+                </div>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <h3 class="card-title">Update Profile</h3>
@@ -33,8 +42,6 @@
                                 <div class="text-muted small">Click to change profile picture</div>
                             </label>
                             {{ form.profile_picture }}
-                            <div>Debug - Input ID: {{ form.profile_picture.id_for_label }}</div>
-                            <div>Debug - Input HTML: {{ form.profile_picture.auto_id }}</div>
                         </div>
 
                         <div class="mb-3">
@@ -60,10 +67,12 @@
                 </div>
             </div>
             <!-- Delete Button -->
-            <div class="mt-4">
-                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">
-                    Delete Account
-                </button>
+            <div class="row mt-4">
+                <div class="col-12 text-center">
+                    <button type="button" class="btn btn-danger w-100" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">
+                        Delete Account
+                    </button>
+                </div>
             </div>
             {% if messages %}
                 {% for message in messages %}
